--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                   Rui Yin
                 </p>
                 <p>
-                  I'm currently a research assistant at <a href="https://www.hanglok-tech.cn/">Hanglok-Tech</a> in Shenzhen. Previously, I studied at the University of Hong Kong in MSc in Computer Science programme, and eventually withdrawed in 2023. I received my BE Degree from School of Computer Science and Engineering, Sun Yat-sen University in 2022.
+                  I'm currently a research assistant at <a href="https://www.hanglok-tech.cn/">Hanglok-Tech</a> in Shenzhen, advised by Dr. <a href="https://scholar.google.com/citations?user=ex_xMRMAAAAJ">Biao Jia</a> and Prof. <a href="https://yulunzhang.com/">Yulun Zhang</a>. Previously, I studied at the University of Hong Kong in the MSc in Computer Science programme, and eventually withdrew in 2023. I received my BE Degree from the School of Computer Science and Engineering, Sun Yat-sen University in 2022.
                 </p>
                 <p>
                   <b>I am looking for a PhD opportunity in 2025 Fall!</b>
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:yinrui2000@outlook.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?user=LrFvLKsAAAAJ&hl">Scholar</a> &nbsp;/&nbsp;
+                  <a href="data/RuiYin-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?user=LrFvLKsAAAAJ&hl">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/frickyinn">Github</a>
                 </p>
               </td>
@@ -45,7 +45,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  My current research interest focuses on 3D vision (e.g. camera/object pose estimation), and deep model compression (e.g. quantization). Previously, I also worked at bioinformatics.
+                  My current research interests focus on 3D vision (e.g. camera/object pose estimation), and deep model compression (e.g. quantization). I have also worked in bioinformatics before.
                 </p>
               </td>
             </tr>
@@ -55,12 +55,12 @@
 
     <tr>
       <td style="padding:20px;width:35%;vertical-align:middle">
-        <a href="https://pratulsrinivasan.github.io/nuvo/">
+        <a href="https://frickyinn.github.io/srpose/">
           <img src='images/srpose.png' width=100%>
         </a>
       </td>
       <td style="padding:20px;width:65%;vertical-align:middle">
-        <a href="https://pratulsrinivasan.github.io/nuvo/">
+        <a href="https://frickyinn.github.io/srpose/">
           <span class="papertitle">SRPose: Two-view Relative Pose Estimation With Sparse Keypoints</span>
         </a>
         <br>
@@ -73,7 +73,7 @@
         <br>
         <em>ECCV</em>, 2024
         <br>
-        <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
+        <a href="https://frickyinn.github.io/srpose/">project page</a>
         /
         <a href="https://arxiv.org/abs/2407.08199">arXiv</a>
         /
