--- a/srpose/index.html
+++ b/srpose/index.html
@@ -210,7 +210,7 @@
          href="./data/paper.pdf">
         <i class="fas fa-file-pdf"></i>
       </a> -->
-      <a class="icon-link" href="https://github.com/crockwell/far" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/frickyinn/srpose" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
