--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Rui Yin
+                  <name>Rui Yin</name>
                 </p>
                 <p>
                   I'm currently a research assistant at <a href="https://www.hanglok-tech.cn/">Hanglok-Tech</a> in Shenzhen, advised by Dr. <a href="https://scholar.google.com/citations?user=ex_xMRMAAAAJ">Biao Jia</a> and Prof. <a href="https://yulunzhang.com/">Yulun Zhang</a>. Previously, I studied at the University of Hong Kong in the MSc in Computer Science programme, and eventually withdrew in 2023. I received my BE Degree from the School of Computer Science and Engineering, Sun Yat-sen University in 2022.
@@ -69,7 +69,7 @@
         <a href="https://dyingbrain.github.io/">Zherong Pan</a>,
         Jianjun Zhu,
         Cheng Wang,
-        and <a href="https://scholar.google.com/citations?user=ex_xMRMAAAAJ">Jia Biao</a>
+        and <a href="https://scholar.google.com/citations?user=ex_xMRMAAAAJ">Biao Jia</a>
         <br>
         <em>ECCV</em>, 2024
         <br>
