--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:yinrui2000@outlook.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/RuiYin-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/RuiYin_CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=LrFvLKsAAAAJ&hl">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/frickyinn">Github</a>
                 </p>
