add SRPose poster

--- a/srpose/index.html
+++ b/srpose/index.html
@@ -136,12 +136,13 @@
   </div>
 </section>
 
-  
+
 
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
+        <img src="./data/srpose_poster.png" alt="SRPose Poster">
         <img src="./data/teaser.png" alt="SRPose Teaser">
         <h2 class="subtitle has-text-justified">
           <b>Fig. 1: Relative pose estimation by SRPose.</b>
