--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
     <tr>
       <td style="padding:20px;width:35%;vertical-align:middle">
+        <img src='images/m_bbad048f1.jpeg' width=100%>
       </td>
       <td style="padding:20px;width:65%;vertical-align:middle">
         <a href="https://academic.oup.com/bib/article-abstract/24/2/bbad048/7035112">
