--- a/srpose/index.html
+++ b/srpose/index.html
@@ -68,7 +68,7 @@
               <a href="https://dyingbrain.github.io/">Zherong Pan</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              JianJun Zhu<sup>1</sup>,
+              Jianjun Zhu<sup>1</sup>,
             </span>
             <span class="author-block">
               Cheng Wang<sup>1</sup>,
