--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                 <p>
                   I'm currently a research assistant at <a href="https://www.hanglok-tech.cn/">Hanglok-Tech</a> in Shenzhen, advised by Dr. <a href="https://scholar.google.com/citations?user=ex_xMRMAAAAJ">Biao Jia</a>, Dr. <a href="https://htqin.github.io/">Haotong Qin</a>, and Prof. <a href="https://yulunzhang.com/">Yulun Zhang</a>. Previously, I studied at the University of Hong Kong in the MSc in Computer Science programme, and I decided to withdraw in 2023. I received my BE Degree from the School of Computer Science and Engineering, Sun Yat-sen University in 2022.
                 </p>
+                <p>I will join <a href="https://xzhou.me/group.html">ZJU3DV Zhou Lab</a> as a research assistant in December 2024 under the guidance of Prof. <a href="https://pengsida.net/">Sida Peng</a> and Prof. <a href="https://xzhou.me/">Xiaowei Zhou</a></p>
                 <p>
-                  <b><mark>**I am seeking PhD opportunities for the upcoming Fall 2025 semester.**</mark></b>
+                  <b>I am seeking PhD opportunities for the upcoming Fall 2025 semester.</b>
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:yinrui2000@outlook.com">Email</a> &nbsp;/&nbsp;
@@ -51,6 +52,15 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:14px;margin-bottom:14px;"><tbody>
+            <tr>
+              <td style="padding-left:20px;padding-right:20px;width:15%;vertical-align:text-top;">
+                <b>2024-12</b>
+              </td>
+              <td style="padding-left:20px;padding-right:20px;width:95%;vertical-align:text-top;">
+                I will join <a href="https://xzhou.me/group.html">ZJU3DV Zhou Lab</a> under the guidance of Prof. <a href="https://pengsida.net/">Sida Peng</a> and Prof. <a href="https://xzhou.me/">Xiaowei Zhou</a>.
+              </td>
+            </tr>
+
             <tr>
               <td style="padding-left:20px;padding-right:20px;width:15%;vertical-align:text-top;">
                 <b>2024-07</b>
