--- a/index.html
+++ b/index.html
@@ -76,12 +76,44 @@
             <td style="padding-left:20px;padding-right:20px;width:100%;vertical-align:middle">
               <h1>Research</h1>
               <p>
-                My current research interests focus on 3D vision (e.g. visual relocalization, 6DoF pose estimation, and monocular depth estimation), and deep model compression (e.g. quantization). I have also worked in multimodal learning and bioinformatics before.
+                My current research interests focus on 3D vision for robotics (e.g. object/camera pose estimation and affordance pose), and deep model compression (e.g. quantization). I have also worked in multimodal learning and bioinformatics before.
               </p>
             </td>
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    
+    <tr>
+      <td style="padding:20px;width:35%;vertical-align:middle">
+        <a href="https://github.com/frickyinn/BiDense">
+          <img src='images/bidense.png' width=100%>
+        </a>
+      </td>
+      <td style="padding:20px;width:65%;vertical-align:middle">
+        <a href="https://github.com/frickyinn/BiDense">
+          <span class="papertitle">BiDense: Binarization for Dense Prediction</span>
+        </a>
+        <br>
+        <strong>Rui Yin</strong>,
+        <a href="https://htqin.github.io/">Qinhao Tong</a>,
+        <a href="https://yulunzhang.com/">Yulun Zhang</a>,
+        Wenbo Li,
+        Yong Guo,
+        Jianjun Zhu,
+        Cheng Wang,
+        and <a href="https://scholar.google.com/citations?user=ex_xMRMAAAAJ">Biao Jia</a>
+        <br>
+        <em>arxiv</em>, 2024
+        <br>
+        <a href="https://arxiv.org/abs/2411.10346">arXiv</a>
+        /
+        <a href="https://github.com/frickyinn/BiDense">Github</a>
+        <p></p>
+        <p>
+          <b>BiDense</b> A generalized <b>Bi</b>narization framework for efficient and accurate <b>Dense</b> prediction tasks.
+        </p>
+      </td>
+    </tr>
           
     <tr>
       <td style="padding:20px;width:35%;vertical-align:middle">
@@ -110,7 +142,7 @@
         <a href="https://github.com/frickyinn/SRPose">Github</a>
         <p></p>
         <p>
-          SRPose: A <b>S</b>parse keypoint-based framework for <b>R</b>elative <b>Pose</b> estimation between two views in both camera-to-world and object-to-camera scenarios.
+          <b>SRPose</b> A <b>S</b>parse keypoint-based framework for <b>R</b>elative <b>Pose</b> estimation between two views in both camera-to-world and object-to-camera scenarios.
         </p>
       </td>
     </tr>
